fixing maven opts